# sample-posthog-startup

./: .gitignore  README.md  package-lock.json  package.json
.github/: pull_request_template.md
backend/: README.md  pyproject.toml
backend/app/: billing.py  deps.py  feature_gate.py  flags.py  main.py  posthog_client.py  search_utils.py
backend/tests/: conftest.py  test_admin_debug.py  test_billing.py  test_flags_registry.py  test_search.py
docs/: feature-flags.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/__tests__/: onboarding.test.jsx
frontend/src/components/: LegacyBilling.jsx  NewBilling.jsx  OnboardingFlow.jsx  SearchResults.jsx
frontend/src/lib/: posthog.js  useFeatureFlag.js
